# miqai

./: .gitignore  .roomodes  Dockerfile  FRONT.md  README.md  TASK.md  azure_test.py  backend_architecture_design.md  backend_upgrade_plan.md  benchmark_results.json  docker-compose.yml  gcs_cors.json  keybindings.json  pipeline_service_with_latency.py  roocode.config.json
insight-engine/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.worker  Makefile  PLANNING.md  PLANNING_BACKEND.md  README.md  docker-compose.dependencies.yml  docker-compose.yml  pyproject.toml  qdrant_test.py
insight-engine/.github/workflows/: ci.yml
insight-engine/docs/: README.md  clips.md  openapi.yml  summarization.md  uploads.md
insight-engine/frontend/: package.json
insight-engine/frontend/.next/: trace
insight-engine/frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
insight-engine/frontend/src/app/: layout.tsx  page.tsx
insight-engine/frontend/src/components/: ClipCarousel.stories.tsx  ClipCarousel.tsx  ClipExtraction.tsx  ClipResults.tsx  Header.tsx  SummarizationChat.tsx  SummarizationDisplay.tsx  VideoSelection.tsx  VideoUpload.tsx
insight-engine/functions/: main.py  requirements.txt
insight-engine/gcs_module/: main.tf  terraform.tfstate  variables.tf
insight-engine/infra/: api_gateway.yml  cloud_run.tf  main.tf  variables.tf
insight-engine/infra/modules/api_gateway/: main.tf
insight-engine/infra/modules/cloud_run/: main.tf  variables.tf
insight-engine/infra/modules/gcs/: variables.tf
insight-engine/infra/modules/pubsub/: variables.tf
insight-engine/load_tests/: k6.js  summarize.js
insight-engine/models/: yolov8_onnx-1.0.4-py3-none-any.whl
insight-engine/observability/: docker-compose.observability.yml
insight-engine/observability/loki/: loki-config.yml
insight-engine/qdrant_storage/: raft_state.json
insight-engine/scripts/: ingest_corpus.py  setup-dev.ps1  setup-dev.sh  start.sh  validate-setup.py
insight-engine/src/insight_engine/: __init__.py  adaptation_controller.py  config.py  dependencies.py  exceptions.py  handlers.py  logging_config.py  main.py  middleware.py  notebook_helpers.py  schemas.py  security.py  tracing.py  utils.py  worker.py
insight-engine/src/insight_engine/agents/: agent.py  email_agent.py  (+4 more)
insight-engine/steering/: product.md  structure.md
insight-engine/tests/: conftest.py  test_agent.py  test_api.py  test_clip_extraction.py  test_config.py  test_data_collection_module.py  test_drift_detection_module.py  test_exceptions.py  test_integration.py  test_model_registry_service.py  test_optimization_service.py  test_rag_pipeline.py  test_services.py  test_tools.py  utils.py
insight-engine/tests/integration/: test_api_endpoints.py  test_background_tasks.py  test_database_operations.py  test_external_services.py
insight-engine/tests/unit/: test_authentication.py  test_rag_components.py  test_resilience.py  test_utils.py  test_video_processing.py
video-ai-system/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.cvat.yml  docker-compose.n8n.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py
video-ai-system/.github/workflows/: ci.yml
video-ai-system/benchmarks/: benchmark_keyframe_extraction.py  benchmark_sampling_policy.py
video-ai-system/config/: adaptation_rules.yml  config.schema.json  development.json
video-ai-system/docs/: active_learning_design.md  api_design.md  dashboard_design.md  drift_detection_design.md  dynamic_adaptation_design.md  learned_sampling_design.md  model_registry_design.md  n8n_workflow_design.md  pipeline_service_design.md  preprocessing_module_design.md  refactored_api_design.md  shadow_testing_design.md  vector_db_service_design.md
video-ai-system/docs/validation/: chaos_engineering_report_phase3.md  phase_2_integration_report.md
video-ai-system/frontend/: jest.config.js  package-lock.json  package.json
video-ai-system/frontend/public/: index.html
video-ai-system/frontend/src/: App.css  App.js
video-ai-system/n8n/: active-learning-workflow.n8n.json  drift-detection-workflow.n8n.json  file-triggered-analysis.n8n.json  video-analysis-workflow.n8n.json
video-ai-system/notebooks/: 01_videomae_pretraining_production.ipynb  01_videomae_pretraining_prototype.ipynb  02_videomae_pretraining_production.ipynb  03_sagemaker_training_launcher.ipynb  04_colab_training_launcher.ipynb  kinetics.ipynb
video-ai-system/observability/: loki-config.yml  promtail-config.yml  tempo-config.yml
video-ai-system/observability/prometheus/: prometheus.yml
video-ai-system/scripts/: benchmark_model.py  optimize_model.py  requirements.txt  train.py
video-ai-system/scripts/chaos/: induce_cpu_load.py  introduce_latency.py  revert_latency.py
video-ai-system/src/api_gateway/: Dockerfile  main.py  requirements.txt
video-ai-system/src/orchestrator/: Dockerfile  main.py
video-ai-system/src/video_ai_system/: adaptation_controller.py  config.py  main.py  notebook_helpers.py  security.py  tracing.py  utils.py  worker.py
video-ai-system/tests/: conftest.py  test_active_learning.py  test_data_collection_module.py  test_drift_detection_module.py  test_main.py  test_model_registry_service.py  test_optimization_service.py  test_pipeline_service.py  test_registry_api.py
video-ai-system/tests/integration/: test_active_learning_service.py  test_full_pipeline.py  test_phase2_mlops_loop.py  test_pipeline_service.py
video-ai-system/tests/unit/: test_adaptation_controller.py  test_audit_service.py  test_benchmark_model.py  test_comparison_service.py  test_drift_detection_service.py  test_governance_routes.py  test_inference_router.py  test_modules.py  test_notebook_helpers.py  test_optimize_model.py  test_pipeline_service.py  test_safety_guard.py  test_sampling_policy.py  test_shadow_testing_service.py  test_shadowing_module.py
video-ai-system/video-ai-system/secrets/: api_key
(+303 files in other folders)
