[tool.poetry]
name = "insight-engine"
version = "0.1.0"
description = "AI-powered video analysis platform"
authors = ["Your Name <you@example.com>"]

packages = [{include = "insight_engine", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.13"
uvicorn = "0.34.3"
google-cloud-storage = "^2.14.0"
google-cloud-speech = "^2.22.0"
google-cloud-videointelligence = "^2.12.0"
pydantic = "^2.5.3"
arq = "^0.25.0"
qdrant-client = "^1.7.3"
langchain = "0.3.26"
langchain-google-genai = "^2.1.7"
langchain-community = "0.3.27"
langchain-core = "0.3.68"
packaging = "24.2"
httpx = "0.28.1"
scikit-learn = "1.5.1"
psutil = "6.0.0"
google-cloud-pubsub = "^2.13.0"
opentelemetry-sdk = "1.24.0"
opentelemetry-semantic-conventions = "0.45b0"
pyyaml = "6.0.2"
mlflow = "^2.10.0"
google-cloud-dlp = "^3.12.0"
ffmpeg-python = "^0.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
redis = "^5.0.1"
google-cloud-secret-manager = "^2.16.0"
google-cloud-core = "^2.3.2"
bleach = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"