[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video_ai_system"
version = "0.1.0"
description = "A modular system for self-supervised video analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.13",
    "uvicorn[standard]==0.34.3",
    "prometheus-fastapi-instrumentator==7.1.0",
    "opencv-python-headless==4.10.0.84",
    "psutil==6.0.0",
    "loguru==0.7.2",
    "arq==0.25.0",
    "redis==5.0.7",
    "pydantic-settings==2.10.1",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-arq",
    "onnxruntime==1.22.0",
    "qdrant-client==1.7.3",
    "scikit-learn==1.5.1",
    "scipy==1.14.0",
    "filelock==3.15.4",
    "httpx==0.28.1",
    "ImageHash==4.3.1",
    "Pillow",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==0.23.7",
    "torch==2.7.1",
    "onnx==1.18.0",
    "neural-compressor==3.4.1",
    "black==25.1.0",
    "ruff==0.12.0",
    "trio==0.26.0",
    "opentelemetry-instrumentation-fastapi",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]